<resources>
    <string name="app_name">Meet20_practice</string>
    <string name="intro">Заполните данные</string>
    <string name="second_activity_intro">Сохраненные данные</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="button_send">Отправить</string>

    <string name="pushkin">Алекса́ндр Серге́евич Пу́шкин (26 мая [6 июня] 1799, Москва — 29 января [10 февраля] 1837, Санкт-Петербург) — русский поэт,
        драматург и прозаик, заложивший основы русского реалистического направления[7], критик и теоретик литературы, историк, публицист; один из
        самых авторитетных литературных деятелей первой трети XIX века.</string>

    <string name="lermontov">Михаи́л Ю́рьевич Ле́рмонтов[10] (3 [15] октября 1814, Москва — 15 [27] июля 1841, Пятигорск) — русский поэт, прозаик,
        драматург, художник. Творчество Лермонтова, в котором сочетаются гражданские, философские и личные мотивы, отвечавшие насущным потребностям
        духовной жизни русского общества, ознаменовало собой новый расцвет русской литературы и оказало большое влияние на виднейших русских писателей и
        поэтов XIX и XX веков.
    </string>

    <string name="esenin">
        Серге́й Алекса́ндрович Есе́нин (21 сентября (3 октября) 1895, Константиново, Кузьминская волость, Рязанский уезд, Рязанская губерния, Российская империя —
        28 декабря 1925, Ленинград[5], СССР) — русский поэт, представитель новокрестьянской поэзии и лирики, а в более позднем периоде творчества — имажинизма[6].
    </string>

    <string name="mayakovskiy">
        Влади́мир Влади́мирович Маяко́вский (7 [19] июля 1893, Багдати, Кутаисская губерния[2] — 14 апреля 1930, Москва) — русский советский поэт. Футурист. Один из крупнейших поэтов XX века[6][7].
    </string>

    <string name="blok">
        Алекса́ндр Алекса́ндрович Блок (16 (28) ноября 1880, Санкт-Петербург, Российская империя — 7 августа 1921, Петроград, РСФСР) — русский поэт, писатель, публицист, драматург, переводчик,
        литературный критик. Классик русской литературы XX столетия, один из крупнейших представителей русского символизма.
    </string>

    <string name="tvardovskiy">
        Алекса́ндр Три́фонович Твардо́вский (8 [21] июня 1910 — 18 декабря 1971) — русский советский писатель, поэт, журналист. Главный редактор журнала «Новый мир» (1950—1954; 1958—1970).
    </string>

    <string name="mandelshtam">
        О́сип Эми́льевич Мандельшта́м (имя при рождении — Ио́сиф; 2 (14) января 1891[8], Варшава — 27 декабря 1938, Владивостокский пересыльный пункт Дальстроя во Владивостоке) — русский поэт,
        прозаик и переводчик, эссеист, критик, литературовед[9][10][11]. Один из крупнейших русских поэтов XX века[12].
    </string>

    <string name="cvetaeva">
        Мари́на Ива́новна Цвета́ева (26 сентября [8 октября] 1892[7], Москва — 31 августа 1941, Елабуга) — русская поэтесса[8][9] Серебряного века, прозаик, переводчица.
    </string>

    <string name="ahmatomva">
        А́нна Андре́евна Ахма́това (в девичестве — Горе́нко, по первому мужу Горе́нко-Гумилёва[11], после развода взяла фамилию Ахма́това,
        по второму мужу Ахма́това-Шиле́йко[12], после развода Ахма́това[13]; 11 [23] июня 1889[14][15], Одесса, Херсонская губерния, Российская
        империя — 5 марта 1966, Домодедово, Московская область, СССР) — русский поэт Серебряного века[16][17](она не признавала слова "поэтесса"),
        переводчица и литературовед, одна из наиболее значимых фигур русской литературы XX века. Была номинирована на Нобелевскую премию по литературе (1965[18] и 1966[19]).
    </string>

    <string name="tutchev">
        Фёдор Ива́нович Тю́тчев (23 ноября [5 декабря] 1803, Овстуг, Орловская губерния — 15 [27] июля 1873, Царское Село) — русский лирик,
        поэт-мыслитель, дипломат, консервативный публицист, член-корреспондент Петербургской Академии Наук с 1857 года, тайный советник.
    </string>

    <string name="bunin">
        Ива́н Алексе́евич Бу́нин (10 [22] октября 1870, Воронеж — 8 ноября 1953, Париж) — русский писатель и поэт, лауреат Нобелевской премии по литературе.
    </string>

    <string name="marshak">Самуи́л Я́ковлевич Марша́к (1887—1964) — русский советский поэт, драматург и переводчик, литературный критик,
        сценарист. Автор популярных детских книг. Лауреат Ленинской (1963) и четырёх Сталинских премий (1942, 1946, 1949, 1951)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
